--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
     ],
     "require": {
         "php": "^8.1",
-        "filament/forms": "^3.0",
+        "filament/forms": "^3.0 | ^4.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^10.0|^11.0|^12.0"
+        "illuminate/contracts": "^10.0 | ^11.0 | ^12.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^7.9",
-        "orchestra/testbench": "^8.0|^9.0",
+        "orchestra/testbench": "^8.0 | ^9.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-arch": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0"
